--- a/testing.ipynb
+++ b/testing.ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_excel(r\"./data/Annual_2023_Hackathon_metadata.xlsx\")\n",
+    "# df = pd.read_excel(r\"./data/Annual_2023_Hackathon_metadata.xlsx\")\n",
     "df.to_csv(r\"./data/Annual_2023_Hackathon_metadata.csv\")"
    ]
   },
