--- a/testing.ipynb
+++ b/testing.ipynb
@@ -17,15 +17,8 @@
    "source": [
     "import pandas as pd\n",
     "# df = pd.read_excel(r\"./data/Annual_2023_Hackathon_metadata.xlsx\")\n",
-    "df.to_csv(r\"./data/Annual_2023_Hackathon_metadata.csv\")"
+    "# df.to_csv(r\"./data/Annual_2023_Hackathon_metadata.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
