--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 217,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -1164,22 +1173,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Depth-dependent P-wave Anisotropy and Its Influence on AVO Interpretation in the Northern Malay Basin'"
-      ]
-     },
-     "execution_count": 199,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mSignature:\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreconstruct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "Approximate reconstruction of one vector from the index.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "key : int\n",
+      "    Id of the vector to reconstruct\n",
+      "x : array_like, optional\n",
+      "    pre-allocated array to store the results\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "x : array_like reconstructed vector, size `self.d`, `dtype`=float32\n",
+      "\u001b[0;31mFile:\u001b[0m      ~/opt/anaconda3/envs/eage-hackathon-streamlit/lib/python3.10/site-packages/faiss/class_wrappers.py\n",
+      "\u001b[0;31mType:\u001b[0m      method"
+     ]
     }
    ],
    "source": [
-    "df[df[\"File name\"]==\"1003.pdf\"][\"Title\"].values[0]"
+    "?db.index.reconstruct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "IndexFlat.reconstruct() missing 1 required positional argument: 'recons'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[215], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m bf\u001b[39m.\u001b[39;49mreturn_vector(\u001b[39mid\u001b[39;49m \u001b[39m=\u001b[39;49m \u001b[39m123\u001b[39;49m)\n",
+      "File \u001b[0;32m~/Documents/projects/eage-hackathon/basic_functions.py:33\u001b[0m, in \u001b[0;36mreturn_vector\u001b[0;34m(id)\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mreturn_vector\u001b[39m(\u001b[39m*\u001b[39m, \u001b[39mid\u001b[39m: \u001b[39mint\u001b[39m):\n\u001b[0;32m---> 33\u001b[0m     result \u001b[39m=\u001b[39m db\u001b[39m.\u001b[39;49mindex\u001b[39m.\u001b[39;49mreconstruct_c(key\u001b[39m=\u001b[39;49m\u001b[39mid\u001b[39;49m)\n\u001b[1;32m     34\u001b[0m     \u001b[39mreturn\u001b[39;00m result\n",
+      "\u001b[0;31mTypeError\u001b[0m: IndexFlat.reconstruct() missing 1 required positional argument: 'recons'"
+     ]
+    }
+   ],
+   "source": [
+    "bf.return_vector(id = 123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mSignature:\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreconstruct_c\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrecons\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "Approximate reconstruction of one vector from the index.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "key : int\n",
+      "    Id of the vector to reconstruct\n",
+      "x : array_like, optional\n",
+      "    pre-allocated array to store the results\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "x : array_like reconstructed vector, size `self.d`, `dtype`=float32\n",
+      "\u001b[0;31mFile:\u001b[0m      ~/opt/anaconda3/envs/eage-hackathon-streamlit/lib/python3.10/site-packages/faiss/swigfaiss.py\n",
+      "\u001b[0;31mType:\u001b[0m      method"
+     ]
+    }
+   ],
+   "source": [
+    "?db.index.reconstruct_c"
    ]
   },
   {
