with search button

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2301,27 +2301,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "single positional indexer is out-of-bounds",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[313], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m qs\u001b[39m.\u001b[39;49mreturn_first_page(query \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mavo inversion\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "File \u001b[0;32m~/Documents/projects/eage-hackathon/query_scholar.py:266\u001b[0m, in \u001b[0;36mreturn_first_page\u001b[0;34m(query)\u001b[0m\n\u001b[1;32m    263\u001b[0m final \u001b[39m=\u001b[39m add_in_paper_repo(papername, year, author, publication, text, link)\n\u001b[1;32m    265\u001b[0m \u001b[39m# use sleep to avoid status code 429\u001b[39;00m\n\u001b[0;32m--> 266\u001b[0m result \u001b[39m=\u001b[39m [final[\u001b[39m\"\u001b[39;49m\u001b[39mPaper Title\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49miloc[\u001b[39m0\u001b[39;49m], final[\u001b[39m\"\u001b[39m\u001b[39mUrl of paper\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39miloc[\u001b[39m0\u001b[39m]]\n\u001b[1;32m    267\u001b[0m \u001b[39mreturn\u001b[39;00m final\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/eage-hackathon-streamlit/lib/python3.10/site-packages/pandas/core/indexing.py:1073\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1070\u001b[0m axis \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39maxis \u001b[39mor\u001b[39;00m \u001b[39m0\u001b[39m\n\u001b[1;32m   1072\u001b[0m maybe_callable \u001b[39m=\u001b[39m com\u001b[39m.\u001b[39mapply_if_callable(key, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj)\n\u001b[0;32m-> 1073\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_getitem_axis(maybe_callable, axis\u001b[39m=\u001b[39;49maxis)\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/eage-hackathon-streamlit/lib/python3.10/site-packages/pandas/core/indexing.py:1625\u001b[0m, in \u001b[0;36m_iLocIndexer._getitem_axis\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1622\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mCannot index by location index with a non-integer key\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   1624\u001b[0m \u001b[39m# validate the location\u001b[39;00m\n\u001b[0;32m-> 1625\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_integer(key, axis)\n\u001b[1;32m   1627\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39m_ixs(key, axis\u001b[39m=\u001b[39maxis)\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/eage-hackathon-streamlit/lib/python3.10/site-packages/pandas/core/indexing.py:1557\u001b[0m, in \u001b[0;36m_iLocIndexer._validate_integer\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1555\u001b[0m len_axis \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39m_get_axis(axis))\n\u001b[1;32m   1556\u001b[0m \u001b[39mif\u001b[39;00m key \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m len_axis \u001b[39mor\u001b[39;00m key \u001b[39m<\u001b[39m \u001b[39m-\u001b[39mlen_axis:\n\u001b[0;32m-> 1557\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mIndexError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39msingle positional indexer is out-of-bounds\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mIndexError\u001b[0m: single positional indexer is out-of-bounds"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/gpapageo/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to /Users/gpapageo/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://scholar.google.com/scholar?start=0&q=EAGE+conference+and+exhibition+test+query&as_sdt=0,5'"
+      ]
+     },
+     "execution_count": 329,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "qs.return_first_page(query = \"avo inversion\")"
+    "qs.return_first_page(query = \"test query\")"
    ]
   },
   {
