basic functionality working

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2301,33 +2301,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/gpapageo/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to /Users/gpapageo/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'https://scholar.google.com/scholar?start=0&q=EAGE+conference+and+exhibition+test+query&as_sdt=0,5'"
+       "['1180.pdf', '190.pdf']"
       ]
      },
-     "execution_count": 329,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "qs.return_first_page(query = \"test query\")"
+    "bf.parse_metadata(metadata = bf.db_search(ids=test, n=2))"
    ]
   },
   {
