with search interfaced in open AI

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2251,6 +2251,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "environ{'COMMAND_MODE': 'unix2003',\n",
+       "        'CONDA_DEFAULT_ENV': 'eage-hackathon-streamlit',\n",
+       "        'CONDA_EXE': '/Users/gpapageo/opt/anaconda3/bin/conda',\n",
+       "        'CONDA_PREFIX': '/Users/gpapageo/opt/anaconda3/envs/eage-hackathon-streamlit',\n",
+       "        'CONDA_PROMPT_MODIFIER': '(eage-hackathon-streamlit) ',\n",
+       "        'CONDA_PYTHON_EXE': '/Users/gpapageo/opt/anaconda3/bin/python',\n",
+       "        'CONDA_SHLVL': '2',\n",
+       "        'HOME': '/Users/gpapageo',\n",
+       "        'HOMEBREW_CELLAR': '/opt/homebrew/Cellar',\n",
+       "        'HOMEBREW_PREFIX': '/opt/homebrew',\n",
+       "        'HOMEBREW_REPOSITORY': '/opt/homebrew',\n",
+       "        'INFOPATH': '/opt/homebrew/share/info:',\n",
+       "        'LOGNAME': 'gpapageo',\n",
+       "        'MANPATH': '/opt/homebrew/share/man::',\n",
+       "        'MallocNanoZone': '0',\n",
+       "        'OLDPWD': '/',\n",
+       "        'ORIGINAL_XDG_CURRENT_DESKTOP': 'undefined',\n",
+       "        'PATH': '/Users/gpapageo/opt/anaconda3/envs/eage-hackathon-streamlit/bin:/Users/gpapageo/.local/bin:/Users/gpapageo/opt/anaconda3/envs/eage-hackathon-streamlit/bin:/Users/gpapageo/opt/anaconda3/condabin:/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/System/Cryptexes/App/usr/bin:/usr/bin:/bin:/usr/sbin:/sbin:/Library/Apple/usr/bin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/local/bin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/bin:/var/run/com.apple.security.cryptexd/codex.system/bootstrap/usr/appleinternal/bin',\n",
+       "        'PWD': '/',\n",
+       "        'SHELL': '/bin/zsh',\n",
+       "        'SHLVL': '2',\n",
+       "        'SSH_AUTH_SOCK': '/private/tmp/com.apple.launchd.N7SAqZfLRT/Listeners',\n",
+       "        'TMPDIR': '/var/folders/sn/s_st53_16dl9zzjkw462jzlc0000gn/T/',\n",
+       "        'USER': 'gpapageo',\n",
+       "        'VSCODE_AMD_ENTRYPOINT': 'vs/workbench/api/node/extensionHostProcess',\n",
+       "        'VSCODE_CODE_CACHE_PATH': '/Users/gpapageo/Library/Application Support/Code/CachedData/b3e4e68a0bc097f0ae7907b217c1119af9e03435',\n",
+       "        'VSCODE_CRASH_REPORTER_PROCESS_TYPE': 'extensionHost',\n",
+       "        'VSCODE_CRASH_REPORTER_SANDBOXED_HINT': '1',\n",
+       "        'VSCODE_CWD': '/',\n",
+       "        'VSCODE_HANDLES_UNCAUGHT_ERRORS': 'true',\n",
+       "        'VSCODE_IPC_HOOK': '/Users/gpapageo/Library/Application Support/Code/1.78-main.sock',\n",
+       "        'VSCODE_NLS_CONFIG': '{\"locale\":\"en-gb\",\"osLocale\":\"en-gb\",\"availableLanguages\":{},\"_languagePackSupport\":true}',\n",
+       "        'VSCODE_PID': '8600',\n",
+       "        'XPC_FLAGS': '0x0',\n",
+       "        'XPC_SERVICE_NAME': '0',\n",
+       "        '_': '/Users/gpapageo/opt/anaconda3/envs/eage-hackathon-streamlit/bin/python',\n",
+       "        '__CFBundleIdentifier': 'com.microsoft.VSCode',\n",
+       "        '__CF_USER_TEXT_ENCODING': '0x1F5:0:2',\n",
+       "        'ELECTRON_RUN_AS_NODE': '1',\n",
+       "        'PYTHONUNBUFFERED': '1',\n",
+       "        'PYTHONIOENCODING': 'utf-8',\n",
+       "        '_CE_CONDA': '',\n",
+       "        'CONDA_PREFIX_1': '/Users/gpapageo/opt/anaconda3',\n",
+       "        'CONDA_ROOT': '/Users/gpapageo/opt/anaconda3',\n",
+       "        '_CE_M': '',\n",
+       "        'LC_CTYPE': 'UTF-8',\n",
+       "        'PYDEVD_IPYTHON_COMPATIBLE_DEBUGGING': '1',\n",
+       "        'PYDEVD_USE_FRAME_EVAL': 'NO',\n",
+       "        'TERM': 'xterm-color',\n",
+       "        'CLICOLOR': '1',\n",
+       "        'FORCE_COLOR': '1',\n",
+       "        'CLICOLOR_FORCE': '1',\n",
+       "        'PAGER': 'cat',\n",
+       "        'GIT_PAGER': 'cat',\n",
+       "        'MPLBACKEND': 'module://matplotlib_inline.backend_inline',\n",
+       "        'OPENAI_API_KEY': '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',\n",
+       "        'KMP_DUPLICATE_LIB_OK': 'True',\n",
+       "        'KMP_INIT_AT_FORK': 'FALSE'}"
+      ]
+     },
+     "execution_count": 334,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.environ"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 283,
    "metadata": {},
    "outputs": [],
@@ -4472,6 +4549,47 @@
    ],
    "source": [
     "qs.return_first_page(query = \"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 338,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "openai.api_key = \"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\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 341,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(page_content=' This paper presents a field test conducted in Grasdalen, Norway in April 2022 to evaluate the use of Unmanned Aerial Systems (UAS) for avalanche forecasting and monitoring. The test utilized data from LiDAR, optical, and GPR sensors and was validated against ground truth data. The results of the test will be used to develop methodologies and workflows for UAS data collection in the Norwegian Public Roads Administration decision support system. This work is part of the GEOSFAIR project funded by the NPRA and the Research Council of Norway.', metadata={'source': 'data\\\\Annual 2023_proceedings for Hackathon\\\\1236.pdf'}),\n",
+       " Document(page_content='\\n\\nKumar, Singh, and Pradhan (2022) used numerical tool sets such as Quartet Structure Generation Set (QSGS) and Lattice Boltzmann Method (LBM) to model multiphase microporous media and predict absolute permeability. Deep Convolutional Neural Networks (DCNNs) and Biologically inspired Particle Swarm Optimization (PSO) were used for classification and hyperparameter selection, respectively. Results showed an accuracy of 97% and a loss of 2%. Their findings were published in the International Journal of Computer Applications and presented at the 84th EAGE Annual Conference & Exhibition.', metadata={'source': 'data\\\\Annual 2023_proceedings for Hackathon\\\\952.pdf'}),\n",
+       " Document(page_content=' This paper discusses the successful testing of an array of two Integrated Projector Nodes (IPNs) in an offshore open water setting to collect seismic data. The IPNs were compared to an equivalently sized conventional air gun source and performed well, producing high quality signals into the subsurface with 98.85% of shots falling within the acceptability criteria. The data was fast-tracked to produce an image that is comparable to what is expected geologically. The results of the pilot test will fuel the work ahead with the processing of the moving sweep lines, the repeatability tests, and other advanced processing approaches.', metadata={'source': 'data\\\\Annual 2023_proceedings for Hackathon\\\\554.pdf'}),\n",
+       " Document(page_content=' This article discusses a new similarity test based on GPS timing, synchronization and nodal systems for verifying the synchronization of recording systems and vibrators in seismic exploration. This method is more efficient and reliable than traditional wireline similarity tests, and field experiments have verified its feasibility. It references two sources which discuss techniques for synchronous timing of land node seismic instruments.', metadata={'source': 'data\\\\Annual 2023_proceedings for Hackathon\\\\1445.pdf'})]"
+      ]
+     },
+     "execution_count": 341,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bf.search_by_query(query = \"test\", n=4)"
    ]
   },
   {
